--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,6 @@
     "semi": [2, "always"],
     "space-after-keywords": [2, "always"],
     "space-in-brackets": [2, "never"],
-    "space-unary-word-ops": 2
+    "space-unary-ops": 2
   }
 }
